name:            xml2html
version:         0.1.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        blaze-html instances for xml-conduit types
category:        XML
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/snoyberg/xml
Description:     blaze-html instances for xml-conduit types

library
    build-depends:   base                      >= 4        && < 5
                   , text                      >= 0.5      && < 1
                   , xml-conduit               >= 0.5      && < 0.7
                   , containers                >= 0.2      && < 0.5
                   , blaze-html                >= 0.4      && < 0.5
    exposed-modules: Text.XML.Xml2Html
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/xml.git
