name:            xpath
version:         0.0.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        XPath QuasiQuoter
category:        XML
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/snoyberg/xml

library
    build-depends:   base                      >= 4        && < 5
                   , template-haskell
                   , text                      >= 0.5      && < 1
                   , xml-enumerator            >= 0.3.4    && < 0.4
                   , attoparsec                >= 0.9      && < 0.10
                   , attoparsec-text           >= 0.8.5.1  && < 0.9
    exposed-modules: Text.XML.XPath
    ghc-options:     -Wall

test-suite test
    type: exitcode-stdio-1.0
    main-is: test.hs

    build-depends: hspec >= 0.6 && < 0.7
                 , HUnit
                 , xml-hamlet
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/xml.git
